# buttplug-py

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
buttplug/: __init__.py
buttplug/client/: __init__.py  client.py
buttplug/connectors/: __init__.py  abstract.py  websocket.py
buttplug/errors/: __init__.py  base.py  client.py  server.py
buttplug/events/: __init__.py  event.py  exceptions.py  manager.py
buttplug/messages/: __init__.py  machinery.py  v0.py  v1.py  v2.py  v3.py
buttplug/utils/: cases.py  cases.py~  dict.py
examples/: example.py
tests/: test_messages.py
